src_old/objects/ScheduleOption__c.object
<CustomObject>
    <description>Schedule Option defines the schedule options that are available when building a Project. Schedule Option is related to Project and Job.</description>
    <fields>
        <fullName>Code__c</fullName>
        <description>Unique value that should be used within APEX code when referencing the Schedule Option.</description>
        <inlineHelpText>Unique value that should be used within APEX code when referencing the Schedule Option.</inlineHelpText>
        <label>Code</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the schedule option.</description>
        <inlineHelpText>Description of the Schedule Option.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the Schedule Option is available at the org level to set visibility when building a Project.</description>
        <inlineHelpText>Indicates that the Schedule Option is available at the org level to set visibility when building a Project.</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Schedule Option</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Description__c</columns>
        <columns>IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schedule Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Scheduling_Option_is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Name)</errorConditionFormula>
        <errorMessage>Please choose a valid Scheduling Option</errorMessage>
    </validationRules>
</CustomObject>